// File: FortiLedger360/protos/fortiledger360/v1/metric.proto

syntax = "proto3";

package fortiledger360.v1;

// Language-agnostic mapping hints.
option java_package   = "com.fortiledger360.v1";
option java_outer_classname = "MetricProtos";
option csharp_namespace     = "FortiLedger360.V1";
option go_package           = "github.com/fortiledger360/protos/fortiledger360/v1;metricpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

// ---------------------------
// Domain-specific Enumerations
// ---------------------------

/**
 * Enumerates measurement units used throughout the metrics subsystem.
 */
enum MetricUnit {
  METRIC_UNIT_UNSPECIFIED = 0;
  PERCENTAGE              = 1; // Generic percentage  (0-100)
  BYTES                   = 2; // Binary size         (KiB, MiB…)
  MILLISECONDS            = 3; // Latency             (ms)
  COUNT                   = 4; // Plain counter       (requests, errors…)
  CORES                   = 5; // CPU cores           (#)
  OPERATIONS_PER_SECOND   = 6; // Throughput          (ops/s)
}

/**
 * Importance level of each metric, used by AlertBroker for SLA
 * evaluation and downstream prioritisation.
 */
enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  CRITICAL             = 1;
  HIGH                 = 2;
  MEDIUM               = 3;
  LOW                  = 4;
}

// ---------------------------
// Core Metric Primitives
// ---------------------------

/**
 * Arbitrary key/value tag pair attached to a Metric for filtering
 * and aggregation (e.g., { "zone": "eu-central-1" }).
 */
message Tag {
  string key   = 1;
  string value = 2;
}

/**
 * Fully-qualified reference to the resource emitting the metric.
 */
message ResourceRef {
  string tenant_id      = 1; // Multi-tenant isolation boundary.
  string cluster_id     = 2; // Logical cluster within the tenant.
  string hostname       = 3; // Actual node name or IP.
  string component_name = 4; // E.g., "scanner", "proxy", "backup-node"
}

/**
 * Metric value wrapper; allows either scalar or structured payload.
 * NOTE: For structured payload, JSON Struct is used for flexibility.
 */
message MetricValue {
  oneof kind {
    double                  scalar   = 1;
    google.protobuf.Struct  complex  = 2; // e.g., histogram buckets.
  }
  MetricUnit unit = 3;
}

/**
 * Single time-series data-point.
 */
message Metric {
  string                metric_id   = 1; // Client-generated UUIDv4.
  string                name        = 2; // canonical_name, e.g., "cpu.load".
  Severity              severity    = 3;
  ResourceRef           source      = 4;
  MetricValue           value       = 5;
  repeated Tag          tags        = 6;
  google.protobuf.Timestamp observed_at = 7;
}

/**
 * Envelope batch used by high-throughput collectors.
 */
message MetricBatch {
  repeated Metric metrics   = 1;
  google.protobuf.Duration collection_interval = 2;
}

/**
 * Acknowledgement from the Metrics service.
 */
message MetricAck {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    ACCEPTED           = 1;
    PARTIAL_FAILURE    = 2;
    REJECTED           = 3;
  }

  Status status = 1;

  // Populated when status == PARTIAL_FAILURE.
  repeated string failed_metric_ids = 2;

  google.protobuf.Timestamp received_at = 3;
}

/**
 * Query used by dashboards and analytics back-ends.
 */
message MetricQuery {
  // Mandatory selectors
  string tenant_id = 1;
  string name      = 2;

  // Optional range; omit for "latest".
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time   = 4;

  repeated Tag tag_filter = 5;

  // Pagination / limiting
  uint32 limit  = 6;  // max # of points
  uint32 offset = 7;  // offset for pagination
}

/**
 * Streamed response for MetricQuery.
 */
message MetricStreamResponse {
  oneof response {
    Metric metric = 1;
    // Server-side informational trailers
    StreamStats stats = 2;
  }
}

/**
 * Metadata about the stream transfer.
 */
message StreamStats {
  uint64 total_points = 1;
  uint32  shards      = 2;  // how many internal partitions answered
  google.protobuf.Duration execution_time = 3;
}

// ---------------------------
// gRPC Service Definition
// ---------------------------

/**
 * MetricService is responsible for ingesting, storing, and retrieving
 * system and security metrics across the FortiLedger360 platform.
 *
 * All RPCs enforce mutual-TLS and per-tenant RBAC policies at the
 * service mesh layer.
 */
service MetricService {

  // High-volume ingress; streaming for efficiency.
  rpc PublishMetrics (stream MetricBatch) returns (MetricAck) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Ad-hoc ingestion for single events (e.g., from edge devices)
  rpc PublishMetric (Metric) returns (MetricAck) {
    option idempotency_level = IDEMPOTENT;
  }

  // Server-side streaming for historical or real-time queries.
  rpc GetMetrics (MetricQuery) returns (stream MetricStreamResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}